tests/lean/irreducible_instance.lean.expected.out
irreducible_instance.lean:6:0: error: tactic.mk_instance failed to generate instance for
  foo ""
